sql bugs fixed
